# dros

./: .gitignore  .rsync-test-gw-exclude  README.md  install-dros.sh  pyproject.toml
docs/: bootstrap.md  openvpn.md
docs/config-objects/: Collectd.md  ConfigMap.md  CronJob.md  DevGroup.md  DnsmasqChinaNames.md  DnsmasqDHCP.md  DnsmasqDNS.md  DockerApp.md  DockerContainer.md  DockerDNS.md  Firewall.md  FwMark.md  Gateway.md  IPv6PD.md  Interface.md  IpListUpdater.md  ResolvConf.md  RouteRuleSet.md  RouteTable.md  SystemMirrorConfig.md  SystemNetworkConfig.md  WgsdCoreDNS.md  XfrmTransport.md
docs/lab/: test-gw.md
examples/: settings.yaml
ip-lists/: amazon.v6.txt  github.v6.txt  private.v4.txt  private.v6.txt  sources.json  tencent.v6.txt  wikipedia.v4.txt  wikipedia.v6.txt
scripts/dev/: sync-test-gw.sh
src/dros/: __init__.py  bootstrap.py  config_catalog.py  config_objects.py  dnsmasq_china_names.py  events.py  executor.py  invocation_log.py  ip_lists.py  kind_aliases.py  (+5 more)
tests/: test_bootstrap.py  test_cli_options.py  test_cli_services.py  test_cli_smoke.py  test_collectd.py  test_config_objects.py  test_configmap_cronjob.py  test_dnsmasq.py  test_docker.py  test_executor.py  test_installer.py  test_ip_list_cli.py  test_ip_lists.py  test_ipv6pd_resolvconf.py  test_ovpn.py  test_plugins.py  test_routing_firewall.py  test_runtime_events.py  test_runtime_locks.py  test_settings.py  test_sync_test_gw.py  test_update.py  test_web_auth.py  test_web_smoke.py  test_wgsd_coredns.py  test_wgsd_install.py
web/: README.md  index.html  package-lock.json  package.json
(+36 files in other folders)
