[project]
name = "dros"
version = "0.1.0"
description = "Personal Debian Router OS"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "cyclopts>=3.20.0",
  "fastapi>=0.115.0",
  "pydantic>=2.10.0",
  "PyYAML>=6.0.0",
  "rich>=13.9.0",
  "uvicorn[standard]>=0.30.0",
]

[project.scripts]
gw = "dros.cli.main:main"
dros = "dros.cli.main:main"
drosd = "dros.daemon.main:main"
dros-web = "dros.web.main:main"

[dependency-groups]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.0.0",
  "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
